[package]
name = "unidoc"
version = "0.1.0"
edition = "2021"

authors = ["cympfh <cympfh@gmail.com>"]
description = "unidoc: Unite all Markdown"
license = "MIT"
repository = "https://github.com/cympfh/unidoc"

[dependencies]
nom = "7"
structopt = "0.3"
handlebars = "4.2.2"
serde = { version = "1.0", features = ["derive"] }
