[package]
name = "unidoc"
version = "0.7.9"
edition = "2021"

authors = ["cympfh <cympfh@gmail.com>"]
description = "unidoc: Unite all Markdown"
license = "MIT"
repository = "https://github.com/cympfh/unidoc"

[dependencies]
nom = "7"
structopt = "0.3"
handlebars = "4.2.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
easy-scraper = "0.2.0"
html-escape = "0.2.11"
lazy_static = "1.4"
regex = "1.5"
emojis = "0.4.0"
